# ai_trading_skill

./: .env.example  INSTALL_AND_RUN.md  README.md  development_plan.md  logic_for_skill.md  pyproject.toml
agent/: bnb_agent_runner.py  mcp_server.py  skill_runner.py
app/: __init__.py  env.py  flask_app.py  routes.py
app/templates/: index.html
backtest/: engine.py  reports.py
bots/: discord_bot.py  telegram_bot.py
data/: cache.py
data/providers/: __init__.py  binance.py  cmc_agent_hub.py  coingecko.py  coinpaprika.py  defillama.py
docs/: improvement_suggestions.md  indicator_recommendation_skill.md  project_structure.md  strategy_spec.md
indicators/: common.py  macd.py  rsi.py
indicators/custom_mql_ported/: __init__.py  abcd_hand.py  apex_indi.py  demark_support.py  fisher_yur4ik.py  hl_signal.py  macd_osma.py  rsi_mfi_ma3.py  vwap_candle_breakout.py
skill/: indicator_recommendation_skill.py  prompt_templates.py  signal_schema.py  spec.py  strategy_skill.py
skills/abcd-hand-v4-indicator-skill/: SKILL.md
skills/apex-indi-indicator-skill/: SKILL.md
skills/cmc-strategy-skill/: SKILL.md
skills/de-mark-support-v2-indicator-skill/: SKILL.md
skills/fisher-yur4ik-indicator-skill/: SKILL.md
skills/hl-signal-indicator-skill/: SKILL.md
skills/indicator-recommendation-skill/: SKILL.md
skills/macd-osma-indicator-skill/: SKILL.md
tests/: test_abcd_hand.py  test_additional_mql_ports.py  test_cmc_provider.py  test_env.py  test_flask_routes.py  test_indicator_recommendation_skill.py  test_skill_spec.py  test_strategy_skill.py  test_telegram_bot.py
(+16 files in other folders)
