[project]
name = "ai-trading-skill"
version = "0.1.0"
description = "Track 2 CMC-style crypto strategy Skill with deterministic backtesting and notification surfaces."
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0,<4.0",
  "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
mcp = [
  "fastmcp>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
